--- a/web-ai-project02/tlias-web-management/pom.xml
+++ b/web-ai-project02/tlias-web-management/pom.xml
@@ -61,6 +61,16 @@
             <version>4.0.0</version>
             <scope>test</scope>
         </dependency>
+
+
+        <!--分页插件PageHelper-->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.4.6</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
