--- a/web-ai-project02/tlias-web-management/src/main/resources/application.yml
+++ b/web-ai-project02/tlias-web-management/src/main/resources/application.yml
@@ -8,6 +8,10 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: 1234
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 100MB
 
 #mybatis的相关配置
 mybatis:
@@ -15,3 +19,10 @@ mybatis:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
     #开启驼峰命名映射
     map-underscore-to-camel-case: true
+
+
+aliyun:
+  oss:
+      endpoint: https://oss-cn-beijing.aliyuncs.com
+      bucketName: javaweb-ayeez
+      region: cn-beijing
